# auto-push

./: CLAUDE.md  Cargo.toml  README.md  TODOS.md  install.sh
.claude/: memory.db
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  performance.json  security-audit.json  swarm-activity.json  test-gaps.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.github/workflows/: ci.yml  release.yml
.swarm/: schema.sql  state.json
Formula/: auto-push.rb
docs/superpowers/plans/: 2026-03-23-pipeline-engine.md  2026-03-25-smart-init-plan.md
docs/superpowers/specs/: 2026-03-18-resilient-auto-push-design.md  2026-03-23-pipeline-engine-design.md  2026-03-25-smart-init-design.md
src/: claude.rs  config.rs  context.rs  diff.rs  generate.rs  git.rs  hooks.rs  main.rs  pipeline.rs  pre_push.rs  preflight.rs  pull.rs  push.rs  scan.rs  smart_init.rs  stage_commit.rs  stash.rs  submodule.rs  template.rs  vars.rs
tests/: integration.rs
