[package]
name = "auto-push"
version = "0.1.8"
edition = "2024"
description = "CLI tool that automates git workflow with AI-generated commit messages via local Claude CLI"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"