[package]
name = "auto-push"
version = "0.8.0"
edition = "2024"
description = "CLI tool that automates git workflow with AI-generated commit messages via local Claude CLI"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
globset = "0.4"
ignore = "0.4"
url = "2"

[dev-dependencies]
tempfile = "3"